# advent-of-code-2021

./: ..gitignore.un~  Cargo.toml
aoc-init/: Cargo.toml
aoc-init/src/: main.rs
aoc-util/src/: lib.rs
day-1-new/: Cargo.toml
day-1-new/src/: main.rs
day-1/src/: main.rs
day-2/src/: main.rs
day-3/src/: main-back.rs  main.rs
day-4/: Cargo.toml
day-4/src/: main.rs
day-5/: Cargo.toml
day-5/src/: input.txt  main.rs
day-6/: Cargo.toml
day-6/src/: input.txt  main.rs
day-7/: input.txt
day-7/src/: main.rs
day-8/: Cargo.toml
day-8/src/: input.txt  main.rs
template/: Cargo.toml
template/src/: main.rs
