[package]
name = "aoc-init"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.25"
reqwest = { version = "0.11.7", features = ["cookies"] }
tokio = { version = "1.14.0", features = ["full"] }
regex = "1.5.4"
